# fortiweb_api

./: .gitignore  MANIFEST.in  Pipfile  README.md  build.sh  pyproject.toml
debugging/: test1.py
src/fortiweb_api/: API.py  api_versions.yaml  endpoints.yaml
src/fortiweb_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fortiweb_api/cli_api/: CliAPI.py  endpoints.yaml
src/fortiweb_api/cli_api/templates/config/: certificate_local.j2  user_ldap.j2  user_local.j2  user_radius.j2  xml_client_certificate.j2  xml_server_certificate.j2
src/fortiweb_api/cli_api/templates/ttp/: user_ldap.ttp  user_local.ttp  user_radius.ttp  xml_client_certificate.ttp  xml_server_certificate.ttp
src/fortiweb_api/dcs/: EndpointBase.py
src/fortiweb_api/dcs/fortinet/fortiweb/: BaseSchema.py  FortiwebGenericDevice.py  SystemInfo.py  Vdom.py
src/fortiweb_api/dcs/fortinet/fortiweb/v2_0/cmdb/log/: AttackLog.py  EventLog.py  Fortianalyzer.py  FortianalyzerPolicy.py  FortianalyzerPolicyList.py  Sensitive.py  SyslogPolicy.py  SyslogPolicyServerList.py  Syslogd.py  TrafficLog.py  TriggerPolicy.py
src/fortiweb_api/dcs/fortinet/fortiweb/v2_0/cmdb/router/: Policy.py  Static.py
src/fortiweb_api/dcs/fortinet/fortiweb/v2_0/cmdb/server_policy/: AccelerationException.py  AccelerationExceptionItem.py  AccelerationPolicy.py  AllowHosts.py  AllowHostsItem.py  AllowList.py  AllowListItem.py  IpGroup.py  (+25 more)
src/fortiweb_api/dcs/fortinet/fortiweb/v2_0/monitor/: Fortiguard.py  Maintenance.py  State.py  System.py  Vdom.py
src/fortiweb_api/dcs/fortinet/fortiweb/v2_0/policy/: PolicyStatusDetail.py
src/fortiweb_api/dcs/fortinet/generic/: FortinetGenericInterface.py
(+212 files in other folders)
