[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fortiweb_api"
version = "0.1"
authors = [
  { name="thomas gyger", email="thomas.gyger@swisscom.com" },
]
description = "request Fortiweb rest API based in simple endpoint names."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "marshmallow==3.23.0",
    "marshmallow_dataclass==8.7.1",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "netmiko==4.5.0",
    "PyYAML==6.0.2",
    "ttp==0.9.5",
    "jinja2==3.1.6",
]

[project.urls]
Homepage = "none"
Issues = "none"

[tool.setuptools]
include-package-data = true